--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Diesel Family Hub</h1>
         <div class="button-container">
             <a href="https://twitch.tv/Eavox_" class="button">Twitch</a>
-            <a href="https://discord.com/invite/yourdiscord" class="button">Discord</a>
+            <a href="https://discord.com/invite/eavox" class="button">Discord</a>
             <a href="https://yourshop.com" class="button">Diesel Shop</a>
             <a href="https://twitter.com/yourprofile" class="button">Twitter</a>
             <a href="https://thedriver.com" class="button">The Driver</a>
