--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="button-container">
             <a href="https://twitch.tv/Eavox_" class="button">Twitch</a>
             <a href="https://discord.com/invite/eavox" class="button">Discord</a>
-            <a href="https://yourshop.com" class="button">Diesel Shop</a>
-            <a href="https://twitter.com/yourprofile" class="button">Twitter</a>
-            <a href="https://thedriver.com" class="button">The Driver</a>
+            <a href="https://eavox-shop.fourthwall.com/" class="button">Diesel Shop</a>
+            <a href="https://twitter.com/EavoxETH" class="button">Twitter</a>
+            <a href="https://drive.google.com/drive/folders/1R1aSYVaYEVIRycSQmh6cTcDz6JrjMsbL?usp=drive_link" class="button">The Driver</a>
         </div>
     </div>
 </body>
