--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <a href="https://discord.com/invite/eavox" class="button">Discord</a>
             <a href="https://eavox-shop.fourthwall.com/" class="button">Diesel Shop</a>
             <a href="https://twitter.com/EavoxETH" class="button">Twitter</a>
-            <a href="https://drive.google.com/drive/folders/1R1aSYVaYEVIRycSQmh6cTcDz6JrjMsbL?usp=drive_link" class="button">The Driver</a>
+            <a href="https://drive.google.com/drive/folders/1R1aSYVaYEVIRycSQmh6cTcDz6JrjMsbL?usp=drive_link" class="button">Driver</a>
+            <a href="#" class="button">Blofin</a>
         </div>
     </div>
 </body>
