--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
             <a href="#" class="button">Blofin</a>
         </div>
     </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
