--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="HUB.svg" alt="Diesel Family Hub" class="title-image">
+        <img src="title.png" alt="Title" class="title-image" id="titleImage">
+        <img src="weed.svg" alt="Weed" class="title-image hidden" id="hoverImage">
         <div class="button-container">
             <a href="https://twitch.tv/Eavox_" class="button">Twitch</a>
             <a href="https://discord.com/invite/eavox" class="button">Discord</a>
