--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diesel Family Hub</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
+        <div class="image-wrapper">
         <img src="HUB.svg" alt="Title" class="title-image" id="titleImage">
         <img src="weed.svg" alt="Weed" class="title-image hidden" id="hoverImage">
         <div class="button-container">
