--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="image-wrapper">
+    <div class="title-container">
         <img src="HUB.svg" alt="Title" class="title-image" id="titleImage">
         <img src="weed.svg" alt="Weed" class="title-image hidden" id="hoverImage">
-        <div class="button-container">
-            <a href="https://twitch.tv/Eavox_" class="button">Twitch</a>
-            <a href="https://discord.com/invite/eavox" class="button">Discord</a>
-            <a href="https://eavox-shop.fourthwall.com/" class="button">Diesel Shop</a>
-            <a href="https://twitter.com/EavoxETH" class="button">Twitter</a>
-            <a href="https://drive.google.com/drive/folders/1R1aSYVaYEVIRycSQmh6cTcDz6JrjMsbL?usp=drive_link" class="button">The Driver</a>
-            <a href="#" class="button">Blofin</a>
-        </div>
+    </div>
+    <div class="button-container">
+        <a href="https://twitch.tv/Eavox_" class="button">Twitch</a>
+        <a href="https://discord.com/invite/eavox" class="button">Discord</a>
+        <a href="https://eavox-shop.fourthwall.com/" class="button">Diesel Shop</a>
+        <a href="https://twitter.com/EavoxETH" class="button">Twitter</a>
+        <a href="https://drive.google.com/drive/folders/1R1aSYVaYEVIRycSQmh6cTcDz6JrjMsbL?usp=drive_link" class="button">The Driver</a>
+        <a href="#" class="button">Blofin</a>
     </div>
     <script src="scripts.js"></script>
 </body>
