--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://eavox-shop.fourthwall.com/" class="button">Diesel Shop</a>
             <a href="https://twitter.com/EavoxETH" class="button">Twitter</a>
             <a href="https://drive.google.com/drive/folders/1R1aSYVaYEVIRycSQmh6cTcDz6JrjMsbL?usp=drive_link" class="button">The Driver</a>
-            <a href="#" class="button">Blofin</a>
+            <a href="https://partner.blofin.com/d/Eavox" class="button">Blofin</a>
         </div>
     </div>
     <script src="scripts.js"></script>
