--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </section>
             <section class="exchange-section content-section">
-                <h2 class="gradient-text">Exchange</h2>
+                <h2 class="gradient-text">Exchanges</h2>
                 <p>Trade <span class="blue-highlight">without KYC</span> and get direct support on Discord. Enjoy <span class="blue-highlight">exclusive access</span> to our <span class="blue-highlight">VIP team</span>!</p>
                 <div class="exchange-links">
                     <div class="exchange-item">
