--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p class="exchange-description">Up to <span class="blue-highlight">$5000</span> in bonus and more!</p>
                     </div>
                     <div class="exchange-item">
-                        <a href="https://hub.eavox.eth.limo/" class="button">WEEX</a>
+                        <a href="https://support.weex.com/en/register?vipCode=krob" class="button">WEEX</a>
                         <p class="exchange-description">Exclusive <span class="blue-highlight">0% fee</span> for the Diesel Family!</p>
                     </div>
                 </div>
